--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -1,17 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<body>
     <ion-title>
-      Tab 1
+        Pipper
     </ion-title>
-  </ion-toolbar>
-</ion-header>
+    
+</body>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content>
+  
