+Post Component +Home Page

--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -1,8 +1,14 @@
-<body>
-    <ion-title>
-        Pipper
-    </ion-title>
+<ion-header>
+    <div class="searchbuttons">
+        <ion-button mode="ios" class="buttonclass">Seguindo</ion-button>
+        <ion-button mode="ios" class="buttonclass">Topo</ion-button>
+        <ion-button mode="ios" class="buttonclass">Novo</ion-button>
+    </div>
+</ion-header>
+<ion-content>
+    <app-home-post></app-home-post>
+    <app-home-post></app-home-post>
+    <app-home-post></app-home-post>
+    <app-home-post></app-home-post>
     
-</body>
-
-  
+</ion-content>
