--- a/Pipper-Front/src/app/tabs/tabs.page.scss
+++ b/Pipper-Front/src/app/tabs/tabs.page.scss
@@ -1,21 +1,21 @@
 
-ion-tabs{
+ion-tabs {
     --ion-background-color: #272727;
-    
 }
+/*ion-tab-bar{
+    border-radius: 15px;
+    margin-bottom: 15%;
+    margin-left: 15%;
+    margin-right: 15%;
 
-ion-tab-bar{
-    border-radius: 10px;
-    margin: 5%;
-    margin: 15%;
-}
+}*/
 ion-icon{
     color: #EFFFFB;
 }
 img{
-    width: auto;
-    height: 50%;
+    width: 40%;
+    height: auto;
 }
-.tab{
+.tab {
     background-color: transparent;
 }
