--- a/Pipper-Front/src/app/tabs/tabs.page.html
+++ b/Pipper-Front/src/app/tabs/tabs.page.html
@@ -13,14 +13,13 @@
       <ion-icon name="add-circle-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4">
+    <ion-tab-button>
       <ion-icon name="search"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab5">
-      <ion-icon name="person-circle-outline"></ion-icon>
+    <ion-tab-button>
+      <ion-icon name="person-circle-outline" (click)="CreatePopOver()"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
   </div>
-
 </ion-tabs>
