+logo #more responsive

--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -1,10 +1,12 @@
-<ion-header>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+<div class="logoName">
+    <img src="../assets/chameleonpog.png">
+</div>
     <div class="searchbuttons">
         <ion-button mode="ios" class="buttonclass">Seguindo</ion-button>
         <ion-button mode="ios" class="buttonclass">Topo</ion-button>
         <ion-button mode="ios" class="buttonclass">Novo</ion-button>
     </div>
-</ion-header>
 <ion-content>
     <app-home-post></app-home-post>
     <app-home-post></app-home-post>
