--- a/Pipper-Front/src/theme/variables.scss
+++ b/Pipper-Front/src/theme/variables.scss
@@ -87,7 +87,7 @@
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #50D890;
+    --ion-color-primary-shade: #272727;
     --ion-color-primary-tint: #5598ff;
 
     --ion-color-secondary: #50c8ff;
