--- a/Pipper-Front/src/app/cadastro/cadastro.page.html
+++ b/Pipper-Front/src/app/cadastro/cadastro.page.html
@@ -3,7 +3,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 </style>
 
-<ion-header mode="md">
+<ion-header class="ion-no-border" mode="md">
   <ion-icon class="header" routerLink="/tabs/tab1" name="chevron-back-circle-outline"size="large"></ion-icon>
 </ion-header>
 
