--- a/Pipper-Front/src/app/cadastro-imagem/cadastro-imagem.page.scss
+++ b/Pipper-Front/src/app/cadastro-imagem/cadastro-imagem.page.scss
@@ -19,14 +19,8 @@ ion-icon{
     align-items: center;
 }
 
-ion-fab-button{
-    margin-right: 70%;
-    margin-left: auto;
-}
-
 h3{
     color: #50D890;
-    margin-right: 60%;
     width: 100%;
 }
 .imagem{
@@ -35,16 +29,13 @@ h3{
     justify-content: center;
     padding-top: 5%;
 }
-img{
-    background-color: #272727;
+.logo{
     height: auto;
     width: 15%;
 }
 .botao{
-    margin-left: 27%;
-    margin-bottom: 5%;
     padding: 1%;
-    width: 45%;
+    width: 75%;
     height: 35%;
     color: #000000;
     font-size: 1.0em;
@@ -57,11 +48,42 @@ img{
     height: 15%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     font-size: 1.2em;
 }
 .pular{
     color: #C4FB6D;
-    margin-left: 45%;
     text-decoration: underline;
 
+}
+.foto-perfil {
+    width: 30vw;
+    height: 30vw;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    background-color: #272727;
+    object-fit: cover;
+}
+.foto-perfil img{
+    display: inline-block;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+    background-size: cover;
+
+}
+.conteudo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.corpo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    align-items: center;
+    
 }
