--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -8,7 +8,7 @@
         <ion-button mode="ios" class="buttonclass">Novo</ion-button>
     </div>
 <ion-content>
-    <app-home-post></app-home-post>
+    <app-home-post routerLink="/post"></app-home-post>
     <app-home-post></app-home-post>
     <app-home-post></app-home-post>
     <app-home-post></app-home-post>
