--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -1,4 +1,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+<ion-app>
 <div class="logoName">
     <img src="../assets/chameleonpog.png">
 </div>
@@ -14,3 +15,4 @@
     <app-home-post></app-home-post>
     
 </ion-content>
+</ion-app>
