--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -58,7 +58,7 @@
 
   <ion-card><ion-card-content>
     <div class="inputAndSubmit">
-      <ion-input position="floating" placeholder="Deixe sua mensagem" class="input"></ion-input>
+      <ion-input position="floating" placeholder="Deixe sua mensagem" class="input" mode="md"></ion-input>
       <ion-button class="submitButton" mode="ios">
         <ion-icon name="paper-plane-outline" size="large" class="submitIcon"></ion-icon>
       </ion-button>
