--- a/Pipper-Front/src/app/tabs/tabs.page.html
+++ b/Pipper-Front/src/app/tabs/tabs.page.html
@@ -16,7 +16,7 @@
       <ion-icon name="search"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab5">
+    <ion-tab-button (click)="presentPopover($event)">
       <ion-icon name="person-circle-outline"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
