--- a/Pipper-Front/src/global.scss
+++ b/Pipper-Front/src/global.scss
@@ -24,3 +24,9 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.popovercss .popover-content{
+    --height: 45%;
+    --width: 85%;
+    border-radius: 10px;
+}
