+responsive component +follow button changing to following +post toasts +profile post component

--- a/Pipper-Front/src/app/cadastro-imagem/cadastro-imagem.page.scss
+++ b/Pipper-Front/src/app/cadastro-imagem/cadastro-imagem.page.scss
@@ -1,7 +1,6 @@
 *{
     --ion-background-color: #272727;
     font-family: 'Poiret One';
-    --color: #50D890;
 }
 
 ion-header{
@@ -86,4 +85,8 @@ h3{
     height: 100%;
     align-items: center;
     
+}
+
+.header {
+    outline: none;
 }
