--- a/Pipper-Front/src/app/components/comment/comment.component.scss
+++ b/Pipper-Front/src/app/components/comment/comment.component.scss
@@ -28,6 +28,10 @@
     margin-bottom: 2%;
 }
 
+.commentText h3 {
+    color: #FFE9E9;
+}
+
 .hr {
     background-color: #C4FB6D;
     height: 0.1px;
