--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -19,7 +19,7 @@
           </div>
             <h4>@fulano</h4>
           </div>
-        <ion-button size="small" class="button" strong="true" mode="ios">Seguir</ion-button>
+        <ion-button size="small" class="button" strong="true" mode="ios">{{followButton.follow}}</ion-button>
       </div>
 
       <div class="text"> <!--collumn-->
