--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -1,12 +1,20 @@
 <div class="profilePost">
   <div class="profileContent">
-
+    <div class="profileImg">
+      <img src="https://www.skinnytaste.com/wp-content/uploads/2019/09/Baked-Sweet-Potatoes-5-500x500.jpg">
+    </div>
+    <div class="timeHrTitle">
+      <h4>Hoje às 15h10</h4>
+      <div class="hr2"></div>
+      <h2>Título Was ist Lorem Ipsum?</h2>
+    </div>
   </div>
   <div class="profileButtons">
-
+    <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>10</h6></ion-button>
+    <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>10</h6></ion-button>
+    <ion-button size="small" class="button"><ion-icon name="star" class="star"></ion-icon><h6>4.5</h6></ion-button>
+    <ion-button size="small" class="button">Tags</ion-button>
   </div>
+  <div class="hr"></div>
 </div>
-
-    <div class="hr"></div>
-
 
