--- a/Pipper-Front/src/app/pages/profile/profile.page.html
+++ b/Pipper-Front/src/app/pages/profile/profile.page.html
@@ -34,6 +34,10 @@
   <ion-card>
     <ion-card-content>
       <app-profile-post></app-profile-post>
+      <app-profile-post></app-profile-post>
+      <app-profile-post></app-profile-post>
+      <app-profile-post></app-profile-post>
+      
     </ion-card-content>
   </ion-card>
 </ion-content>
