--- a/Pipper-Front/src/app/pages/profile/profile.page.scss
+++ b/Pipper-Front/src/app/pages/profile/profile.page.scss
@@ -76,7 +76,7 @@ h2 {
 }
 
 .hr {
-    background-color: #C4FB6D;
+    background-color: #50D890;
     height: 0.1px;
     margin-top: 5%;
     margin-bottom: 5%;
