--- a/Pipper-Front/src/theme/variables.scss
+++ b/Pipper-Front/src/theme/variables.scss
@@ -182,7 +182,7 @@
 
     --ion-toolbar-background: #0d0d0d;
 
-    --ion-item-background: #000000;
+    --ion-item-background: #272727;
 
     --ion-card-background: #272727;
   }
@@ -222,7 +222,7 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #272727;
 
     --ion-toolbar-background: #1f1f1f;
 
@@ -233,7 +233,7 @@
 }
 
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
@@ -338,7 +338,7 @@
 
     --ion-toolbar-background: #0d0d0d;
 
-    --ion-item-background: #000000;
+    --ion-item-background: #272727;
 
     --ion-card-background: #272727;
   }
@@ -378,7 +378,7 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #272727;
 
     --ion-toolbar-background: #1f1f1f;
 
