+Edit Profile Page +Responsive Icons #Fewer changes in ProfilePage

--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="followAndTagPart"> <!--row-->
-          <ion-button size="small" class="button" strong="true" mode="ios" (click)="changeFollow()">{{followButton.follow}}</ion-button>
+          <ion-button size="small" class="buttonFollow" strong="true" mode="ios" (click)="changeFollow()">{{followButton.follow}}</ion-button>
           <ion-button size="small" class="buttonTag" strong="true" mode="ios">Tags</ion-button>
         </div>
       </div>
