--- a/Pipper-Front/src/app/components/comment/comment.component.scss
+++ b/Pipper-Front/src/app/components/comment/comment.component.scss
@@ -2,7 +2,7 @@
     width: 40%;
     display: inline-block;
     height: auto;
-    border-radius: 50%;
+    border-radius: 50px;
     overflow: hidden;
 }
 
