--- a/Pipper-Front/src/app/components/home-post/home-post.component.scss
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.scss
@@ -28,7 +28,7 @@
     width: 100%;
     display: inline-block;
     height: auto;
-    border-radius: 10%;
+    border-radius: 10px;
     overflow: hidden;
 
 }
