--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
@@ -26,8 +26,8 @@
 .hr {
     background-color: #50D890;
     height: 0.1px;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 .hr2 {
@@ -61,8 +61,15 @@ h2 {
 
 }
 
+.postsCard {
+    margin-top: 0%;
+    border-radius: 10px;
+}
+
 @media screen and (max-width: 350px) {
-    .profileButtons {
-        flex-direction: column;
+    .button {
+        width: 25%;
+        height: 25%;
+        font-size: 50%;
     }
 }
