--- a/Pipper-Front/src/app/pages/post/post.page.scss
+++ b/Pipper-Front/src/app/pages/post/post.page.scss
@@ -24,6 +24,7 @@ ion-header::after {
 
 ion-card {
     margin-top: 1%;
+    border-radius: 10px;
 }
 
 ion-card-header img {
@@ -38,8 +39,8 @@ h1 {
 .userMask {
     width: 30%;
     display: inline-block;
-    height: auto;
-    border-radius: 50%;
+    height: 100%;
+    border-radius: 50px;
     overflow: hidden;
 }
 
@@ -140,14 +141,13 @@ ion-icon {
 .iconMask {
     width: 40%;
     display: inline-block;
-    height: auto;
-    border-radius: 50%;
+    height: 100%;
+    border-radius: 50px;
     overflow: hidden;
 }
 
 .iconMask img {
     width: 100%;
-    border-radius: 50%;
     height: auto;
     object-fit: cover;
     background-size: cover;
@@ -195,4 +195,14 @@ ion-icon {
 
 .submitIcon {
     color: #272727;
+}
+
+@media screen and (max-width: 350px) {
+    .followAndTagPart {
+        flex-direction: column;
+    }
+
+    .buttonTag, .buttonFollow {
+        width: 100%;
+    }
 }
