--- a/Pipper-Front/src/app/login-component/login-component.component.scss
+++ b/Pipper-Front/src/app/login-component/login-component.component.scss
@@ -44,6 +44,7 @@ img{
     margin-top: 7%;
     text-decoration: underline;
     display: flex;
+    outline: none;
 }
 .botao{
     margin-top: 8%;
