--- a/Pipper-Front/src/global.scss
+++ b/Pipper-Front/src/global.scss
@@ -29,4 +29,17 @@
     --height: 45%;
     --width: 85%;
     border-radius: 10px;
+    position: relative !important;
+    margin: 0 auto !important;
+    left: auto !important;
+    top: auto !important;
+}
+.tagspopovercss .popover-content{
+    background-color: #272727;
+    --width: 90%;
+    border-radius: 10px;
+    position: relative !important;
+    margin: 0 auto !important;
+    left: auto !important;
+    top: auto !important;
 }
