--- a/Pipper-Front/src/app/pages/search/search.page.html
+++ b/Pipper-Front/src/app/pages/search/search.page.html
@@ -19,7 +19,7 @@
       <ion-button class="tag" color="tertiary" *ngIf="saude" (click)="close(6)">saude</ion-button>
       <ion-button class="tag" color="tertiary" *ngIf="esporte" (click)="close(7)">esporte</ion-button>
       <ion-button class="tag" color="tertiary" *ngIf="alimentacao" (click)="close(8)">alimentacao</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="utilidades_domesticas" (click)="close(9)">utilizades_domesticas</ion-button>
+      <ion-button class="tag" color="tertiary" *ngIf="utilidades_domesticas" (click)="close(9)">utilizades domesticas</ion-button>
       <ion-button class="tag" color="tertiary" *ngIf="infantis" (click)="close(10)">infantis</ion-button>
     </form>
   </div>
