--- a/Pipper-Front/src/app/login-component/login-component.component.html
+++ b/Pipper-Front/src/app/login-component/login-component.component.html
@@ -8,11 +8,11 @@
   <img src="../../assets/chameleonpog.png">
   </div>
   <div class="ion-padding">
-    <form [formGroup]="registerForm" (ngSubmit) = "submitForm(registerForm)">
+    <form [formGroup]="loginForm" (ngSubmit) = "login(loginForm)">
     <ion-list>
       <ion-item>
-        <ion-label position="floating">Nickname</ion-label>
-        <ion-input type="nickname" formControlName="nickname"></ion-input>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Senha</ion-label>
@@ -20,8 +20,8 @@
       </ion-item>
     </ion-list>
       <div class="login">
-        <ion-button class="botao" expand="block" size="Secondary" type="submit" shape="round" [disabled]="registerForm.invalid" color ="success">Entrar</ion-button>
-        <div class="entrar" routerLink="/cadastro" (click)="close()">Cadastrar-se</div>
+        <ion-button class="botao" expand="block" size="Secondary" type="submit" shape="round" [disabled]="loginForm.invalid" color ="success">Entrar</ion-button>
+        <div class="entrar" (click)="close()">Cadastrar-se</div>
       </div>
     </form>
   </div>
