--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -11,7 +11,13 @@
 
 <ion-content>
   <div *ngIf="showNovo">
-    <app-home-post routerLink="/post"></app-home-post>
+    <app-home-post
+     *ngFor="let post of posts"
+     [post]="post"
+     
+     
+     >
+    </app-home-post>
   </div>
 
   <div *ngIf="showSeguindo">
