#few changes in profile page

--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -34,8 +34,9 @@
           <ion-button size="small" class="buttonTag" strong="true" mode="ios">Tags</ion-button>
         </div>
       </div>
-
-      <h2>Lorem Ipsum</h2>
+      <div class="postTitle">
+        <h2>Lorem Ipsum</h2>
+      </div>
       <div class="leftRightAndText">
         <div class="quoteIconLeft">
           <img src="../assets/quote.png">
