--- a/Pipper-Front/src/app/pages/post/post.page.scss
+++ b/Pipper-Front/src/app/pages/post/post.page.scss
@@ -36,6 +36,11 @@ h1 {
     margin-top: 0px;
 }
 
+.cardPhoto {
+    display: flex;
+    justify-content: center;
+}
+
 .userMask {
     width: 30%;
     display: inline-block;
@@ -54,6 +59,7 @@ h1 {
 
 .userPart {
     display: flex;
+    margin-right: 2%;
 }
 
 h3 {
@@ -86,9 +92,9 @@ ion-button {
     --color: black;
 }
 
-.buttonTag {
+.buttonTag, .buttonFollow {
     width: 45%;
-}
+}   
 
 h2 {
     margin-top: 2%;
@@ -97,6 +103,10 @@ h2 {
 }
 
 .quoteIconLeft {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
     width: 30%;
     margin-right: 2%;
 }
@@ -111,6 +121,10 @@ h2 {
 
 .leftRightAndText {
     display: flex;
+}
+
+.quoteIconLeft img, .quoteIconRight img {
+    width: 2vh;
 }
 
 ion-subtitle {
@@ -185,12 +199,14 @@ ion-icon {
 .inputAndSubmit {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .submitButton {
     --background: #C4FB6D;
-    width: 20%;
+    width: 18%;
     margin-left: 3%;
+    height: 40px;
 }
 
 .submitIcon {
