--- a/Pipper-Front/src/theme/variables.scss
+++ b/Pipper-Front/src/theme/variables.scss
@@ -232,7 +232,7 @@
 }
 
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
