--- a/Pipper-Front/src/app/cadastro/cadastro.page.html
+++ b/Pipper-Front/src/app/cadastro/cadastro.page.html
@@ -13,7 +13,7 @@
 
 <ion-content mode="md">
 <div class="ion-padding">
-  <form [formGroup]="registerForm" (ngSubmit) = "submitForm(registerForm)">
+  <form [formGroup]="registerForm" (ngSubmit)="submitForm(registerForm)">
   <ion-list>
     <ion-item>
       <ion-label position="floating">Nome</ion-label>
@@ -34,7 +34,7 @@
       </ion-item>
       <ion-item>
         <ion-label position="floating">Confirmar Senha</ion-label>
-        <ion-input type="confirm_password" formControlName="confirm_password"></ion-input>
+        <ion-input type="password" formControlName="confirm_password"></ion-input>
       </ion-item>
     </ion-list>
     <div class="login">
