--- a/Pipper-Front/src/app/user-popover/user-popover.component.html
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.html
@@ -1,3 +1,20 @@
-<p>
-  user-popover works!
-</p>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+</style>
+
+<ion-content mode="md">
+  <div class="ion-padding">
+    <div class="info">
+      <img src="../../assets/rosto.jpg">
+      <h4>Fulano (@fulano)</h4>
+    </div>
+    <div class="linha"></div>
+    <div class="conteudo">
+      <h5 (click)="perfil()">Meu Perfil</h5>
+      <div (click)="logout()">
+        <h5 (click)="logout()">Sair</h5>
+     </div>
+    </div>
+  </div>
+</ion-content>
