--- a/Pipper-Front/src/app/pages/profile/profile.page.scss
+++ b/Pipper-Front/src/app/pages/profile/profile.page.scss
@@ -141,6 +141,8 @@ h2 {
 h3 {
     color: #50D890;
     font-size: 100%;
+    font-family: 'Poiret One', cursive;
+    -webkit-text-stroke: 0.5px #50D890;
 }
 
 h6 {
