--- a/Pipper-Front/src/app/user-popover/user-popover.component.html
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.html
@@ -5,15 +5,36 @@
 
 <ion-content mode="md">
   <div class="ion-padding">
-    <div class="info">
-      <img src="../../assets/rosto.jpg">
-      <h4>Fulano (@fulano)</h4>
+    <div class="profileContent">
+      <div class="profileMask">
+        <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+      </div>
+      <div class="userInfo">
+        <h2>Fulano (@fulano)<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
+        <div class="userNumbers">
+          <div class="userPosts">
+            <div class="number"><h3>56</h3></div>
+            <div class="numberText"><h6>Publicações</h6></div>
+          </div>
+          <div class="userFollowers">
+            <div class="number"><h3>8</h3></div>
+            <div class="numberText"><h6>Seguidores</h6></div>
+          </div>
+          <div class="userFollowing">
+            <div class="number"><h3>102</h3></div>
+            <div class="numberText"><h6>Seguindo</h6></div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="linha"></div>
+    <div class="hr"></div>
+
     <div class="conteudo">
-      <h5 (click)="perfil()">Meu Perfil</h5>
-      <div (click)="logout()">
-        <h5 (click)="logout()">Sair</h5>
+     <div class="myProfile">
+        <ion-icon name="person-circle-outline" size="large"></ion-icon><h5 (click)="perfil()">Meu Perfil</h5>
+     </div>
+     <div class="logout" (click)="logout()">
+        <ion-icon name="exit-outline" size="large"></ion-icon><h5 (click)="logout()">Sair</h5>
      </div>
     </div>
   </div>
