--- a/Pipper-Front/src/app/user-popover/user-popover.component.html
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.html
@@ -11,10 +11,8 @@
     </div>
     <div class="linha"></div>
     <div class="conteudo">
-      <h5>Meu Perfil</h5>
-      <div (click)="logout()">
-        <h5>Sair</h5>
-     </div>
+      <h5 (click)="perfil()">Meu Perfil</h5>
+      <h5 (click)="logout()">Sair</h5>
     </div>
   </div>
 </ion-content>
